# vacancy-parser

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  alembic.ini.example  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_12_14_1151-8bd419339a42_create_accounts_table.py  2025_12_28_0238-7a1b45ffc953_updated_id.py  2025_12_28_2033-0be694d02161_updated_tables.py  2025_12_28_2218-bcdf7891005c_updated_tables.py  2026_01_16_1835-3400cb002845_added_status_to_collection_link.py  2026_01_20_1625-eea09c9aea81_updated_parsing_tables_and_added_proxy_.py
configs/: database_config.py
docs/: architecture-api.md  architecture.md  data-model.md  overview.md
docs/admin_api/: account.md  invoices.md  subscribe.md
docs/api/: account.md  auth.md  overview.md  subscribe.md  vacancy.md
infrastructure/: docker-compose.yml
migrations/: env.py
migrations/versions/: f38d775050b6_initial_migration.py
models/: __init__.py  account.py  base.py  filter.py  link.py  link_list.py  parsing_log.py  subscribe.py
routes/: account_routes.py
schemas/: account.py  link_list.py
services/: account_services.py
src/: alembic.ini  requirements.txt
src/api/: config.py  main.py
src/api/dependencies/: auth.py
src/api/exceptions/: handlers.py
src/api/routes/: account_routes.py  auth_routes.py  collection_job_routes.py  collection_routes.py  link_routes.py
src/api/schemas/: account.py  account_subscription.py  collection.py  job.py  link.py  link_list.py  message.py  subscription.py
src/api/utils/: jwt_utils.py  security.py
src/core/configs/: config.py  kafka.py
src/core/consumers/: kafka_consumer.py
src/core/db/: database.py
src/core/db/enums/: __init__.py  account_subscription_status.py  account_type.py  filter_employment_type.py  filter_experience_level.py  filter_work_type.py  invoice_status.py  job_status.py  job_task_status.py  proxy_status.py  status.py  subscribe_status.py  subscribe_target_type.py  transaction_provider.py  transaction_status.py  verification_code_type.py
src/core/db/models/: __init__.py  account.py  account_subscription.py  base.py  collection.py  collection_link.py  filter.py  invoice.py  link.py  link_list.py  parsing_job.py  parsing_log.py  parsing_run.py  parsing_task.py  proxy.py  subscribe.py  subscription.py  transaction.py  verification_code.py
src/core/events/: kafka_producer.py
src/core/repositories/: account_repositories.py  account_repository.py  collection_link_repository.py  collection_repositories.py  collection_repository.py  link_repository.py  parsing_job_repository.py  verification_repository.py
src/core/schemas/: Account.py  account.py  collection.py  link.py
src/core/services/: account_service.py  account_services.py  collection_link_service.py  collection_service.py  collection_services.py  gmail_service.py  link_service.py  parsing_job_service.py  verification_service.py
src/core/utils/: logger.py  security.py
src/models/: account.py  filter.py  link.py  link_list.py  parsing_log.py  subscribe.py
utils/: account_utils.py  password_utils.py  security.py
