[project]
name = "vacancy-parser"
version = "0.1.0"
description = "For automatic parsing and filtering of job vacancies from multiple company websites and platforms, with the ability to select your preferred sources."
authors = [
    {name = "Jaswine",email = "vaselesstolarov813@gmail.com"}
]
license = {text = "GNU Affero General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.10, <= 3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiokafka (>=0.13.0,<=0.13.0)",
    "aio-pika (>=9.5.8,<=9.5.8)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<=2.12.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "playwright (>=1.57.0,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<=1.19.1)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "coverage (>=7.13.1,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<9.0.3)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false